--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p id="telefone">(54)98402-7602</p>
         </section>
         <section id="descricao">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, distinctio aut eaque eligendi qui deserunt eum laboriosam mollitia velit, dolorum repudiandae excepturi nemo incidunt consectetur est cupiditate expedita dicta soluta.</p>
+            <p>Considero-me um nato otimizador de processos ao mesmo tempo em que constantemente busco a satisfação alheia. Pelo menos, assim tenho sido, desde que me dei por conta. INTJ; Fleumatico-sanguíneo.</p>
         </section>
         <section>
             <nav>
