--- a/objetivos.html
+++ b/objetivos.html
@@ -21,13 +21,15 @@
 
     <main>
         <ul id="objetivos">
-            <li class="textosintercalados">ALGUMA FRASE QUE SIRVA DE TÍTULO!</li><br>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptates molestias quod itaque, iusto et dignissimos saepe! Vel dicta recusandae fugiat iusto quisquam eveniet? Voluptate itaque similique doloremque. Architecto, praesentium!</li><br>
-            <li class="textosintercalados">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi placeat officia sint, animi enim itaque tempora excepturi possimus dolore consectetur, molestiae quia numquam nemo ducimus nulla dignissimos, provident reprehenderit harum.</li><br>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
+            <li class="toplist">OBTER SUCESSO NO RAMO DE DESENVOLVIMENTO DE SOFTWARE</li><br>
+            <li>Ampliar meu conhecimento em programação;</li><br>
+            <li>Direcionar minhas múltiplas habilidades para o desenvolvimento de softwares;</li><br>
+            <li>Prosseguir me aprimorando em Excel, análise gráfica e estatística;</li><br>
+            <li>Concluir com extremo êxito minha formação Full Stack na Growdev (término em setembro de 2024).</li>
         </ul>
     </main>
 </body>
 
 </html>
+
 
