--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -5,51 +5,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Gheno</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="shortcut icon" href="./images/dfavicon.ico" type="image/x-icon">
 </head>
 
-<body>
-    <header>
-        <img id="foto" src="./images/minhafoto.jpg" alt="Foto do Daniel" title="Daniel">
-        <nav>
-            <a class="navs" href="./index.html">Sobre</a>
-            <a class="navs" href="./conhecimentos.html" style="color: white;"><strong>Conhecimentos</strong></a>
-            <a class="navs" href="./objetivos.html">Objetivos</a>
-        </nav>
-    </header>
+<style>
+    * {
+        overflow: hidden;
+    }
+</style>
 
-    <main>
-        <ol type="a">
+<body class="container-fluid mb-0 p-0 text-secondary">
+    <div class="row">
+        <header class="text-center col-3 bg-secondary vh-100 me-4">
+            <div class="row h-25"></div>
+            <img class="rounded-circle w-75 border border-5 border-dark mb-3" src="./images/minhafoto.jpg"
+                alt="Foto do Daniel" title="Daniel">
+            <nav class="d-flex flex-column align-items-center">
+                <a class="text-light text-decoration-none" href="./index.html">Sobre</a>
+                <a class="text-light text-decoration-none fs-4" href="./conhecimentos.html"><strong>Conhecimentos</strong></a>
+                <a class="text-light text-decoration-none" href="./objetivos.html">Objetivos</a>
+            </nav>
+        </header>
+        <div class="col-8">
+            <div class="row m-4"></div>
 
-            <li class="toplist">INFORMÁTICA</li>
-            <li>Bolsista do programa Despertar.dev Full Stack (Sicredi e Growdev);</li>
-            <li>Anos de experiência em informática básica;</li>
-            <li>Assistência técnica;</li>
-            <li>Usuário bastante ativo de excel; </li>
-            <li>Bom conhecimento em análise gráfica.</li>
-            <br>
+            <main class="row">
+                <ol>
 
-            <li class="toplist">Linguagens de desenvolvimento de software:</li>
-            <ul class="sublista">
-                <li>HTML;</li>
-                <li>CSS;</li>
-                <li>Javascript;</li>
-                <li>Pinescript;</li>
-                <li>AHK.</li>
-            </ul><br><br>
+                    <li class="text-dark"><strong>INFORMÁTICA</strong></li>
+                    <li>Bolsista do programa Despertar.dev Full Stack (Sicredi e Growdev);</li>
+                    <li>Anos de experiência em informática básica;</li>
+                    <li>Assistência técnica;</li>
+                    <li>Usuário bastante ativo de excel; </li>
+                    <li>Bom conhecimento em análise gráfica.</li>
+                    <br>
 
-            <li class="toplist">Outras habilidades:</li>
-            <ul class="sublista">
-                <li>Graduado em Educação Física;</li>
-                <li>Cozinheiro amador;</li>
-                <li>Bombeiro Voluntário de Nova Petrópolis - RS;</li>
-                <li>Experiência em análise técnica de ativos financeiros;</li>
-                <li>Gestor de processos de pequena empresa;</li>
-                <li>Edição do livro <a id="livro" href="https://www.amazon.com.br/NOSSAS-M%C3%83ES-Sinos-Bochum-Tannenwald-ebook/dp/B0C94XRV66/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=nossa+maes+e+os+sinos+de+bochum&sr=8-1" target="_blank">Nossa Mães e os Sinos de Bochum (Helena Seger).</a></li>
-            </ul>
-        </ol>
-    </main>
+                    <li class="text-dark"><strong>Linguagens de desenvolvimento de software:</strong></li>
+                    <ul class="sublista">
+                        <li>HTML;</li>
+                        <li>CSS;</li>
+                        <li>Javascript;</li>
+                        <li>Pinescript;</li>
+                        <li>AHK.</li>
+                    </ul><br><br>
+
+                    <li class="text-dark"><strong>Outras habilidades:</strong></li>
+                    <ul class="sublista">
+                        <li>Graduado em Educação Física;</li>
+                        <li>Cozinheiro amador;</li>
+                        <li>Bombeiro Voluntário de Nova Petrópolis - RS;</li>
+                        <li>Experiência em análise técnica de ativos financeiros;</li>
+                        <li>Gestor de processos de pequena empresa;</li>
+                        <li>Edição do livro <a class="text-dark"
+                                href="https://www.amazon.com.br/NOSSAS-M%C3%83ES-Sinos-Bochum-Tannenwald-ebook/dp/B0C94XRV66/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=nossa+maes+e+os+sinos+de+bochum&sr=8-1"
+                                target="_blank">Nossa Mães e os Sinos de Bochum (Helena Seger).</a></li>
+                    </ul>
+                </ol>
+            </main>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
