--- a/index.html
+++ b/index.html
@@ -5,51 +5,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Gheno</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="shortcut icon" href="./images/dfavicon.ico" type="image/x-icon">
 </head>
 
-<body>
-    <header>
-        <img id="foto" src="./images/minhafoto.jpg" alt="Foto do Daniel" title="Daniel">
-        <nav>
-            <a class="navs" href="./index.html" style="color: white;"><strong>Sobre</strong></a>
-            <a class="navs" href="./conhecimentos.html">Conhecimentos</a>
-            <a class="navs" href="./objetivos.html">Objetivos</a>
-        </nav>
-    </header>
+<style>
+    .grayscale {
+        filter: grayscale(100%);
+    }
+    * {
+        overflow: hidden;
+    }
+</style>
 
-    <main class="sobre">
-        <h1>Daniel <span id="sobrenome">Gheno</span></h1>
-        <section>
-            <p id="endereco">Rua Vicente Pietro, 4811, Pinhal Alto, Nova Petrópolis - RS</p>
-            <p id="email"><a href="mailto: dbgheno@gmail.com" targe="_blank">dbgheno@gmail.com</a></p>
-            <p id="telefone">(54)98402-7602</p>
-        </section>
-        <section id="descricao">
-            <p>Considero-me um nato otimizador de processos ao mesmo tempo em que constantemente busco a satisfação alheia. Pelo menos, assim tenho sido, desde que me dei por conta. INTJ; Fleumatico-sanguíneo.</p>
-        </section>
-        <section>
-            <nav>
-                <a class="redes" href="https://github.com/dbgheno" title="GitHub" target="_blank">
-                    <img class="redesImg" src="./images/githublogo.png" alt="GitHub">
-                </a>
-                <a class="redes" href="https://www.linkedin.com/in/danielgheno/" title="LinkedIn" target="_blank">
-                    <img class="redesImg" src="./images/linkedinlogo.png" alt="LinkedIn">
-                </a>
-                <a class="redes" href="https://wa.me//5554984027602" title="WhatsApp" target="_blank">
-                    <img class="redesImg" src="./images/whatsapp.png" alt="WhatsApp">
-                </a>
-                <a class="redes" href="https://www.facebook.com/dbgheno/" title="Facebook" target="_blank">
-                    <img class="redesImg" src="./images/facebooklogo.png" alt="Facebook">
-                </a>
-                <a class="redes" href="https://www.instagram.com/dbgheno/" title="Instagram" target="_blank">
-                    <img class="redesImg" src="./images/instagramlogo.png" alt="Instagram">
-                </a>
+<body class="container-fluid mb-0 p-0 text-secondary">
+    <div class="row">
+        <header class="text-center col-3 bg-secondary vh-100 me-4">
+            <div class="row h-25"></div>
+            <img class="rounded-circle w-75 border border-5 border-dark mb-3" src="./images/minhafoto.jpg"
+                alt="Foto do Daniel" title="Daniel">
+            <nav class="d-flex flex-column align-items-center">
+                <a class="text-light text-decoration-none fs-4" href="./index.html"><strong>Sobre</strong></a>
+                <a class="text-light text-decoration-none" href="./conhecimentos.html">Conhecimentos</a>
+                <a class="text-light text-decoration-none" href="./objetivos.html">Objetivos</a>
             </nav>
-        </section>
-    </main>
+        </header>
+        <div class="col-8">
+            <div class="row h-25"></div>
+
+            <main class="row">
+                <!-- <div class="col-6 d-flex justify-content-center "> -->
+                    <h1><b>Daniel <span class="text-dark">Gheno</span></b></h1>
+                <!-- </div> -->
+                <section class="col-6">
+                    <p class="mb-0">Rua Vicente Pietro, 4811, Pinhal Alto, Nova Petrópolis - RS</p>
+                    <div class="col-10">
+                        <p><a class="text-dark" href="mailto: dbgheno@gmail.com" target="_blank">dbgheno@gmail.com</a> - (54)98402-7602</p>
+                    </div>
+                </section>
+                <div class="offset-2"></div>
+                <section class="text-dark col-10">
+                    <p>Considero-me um nato otimizador de processos ao mesmo tempo em que constantemente busco a
+                        satisfação alheia. Pelo menos, assim tenho sido, desde que me dei por conta. INTJ;
+                        Fleumático-sanguíneo.
+                    </p>
+                </section>
+                <section>
+                    <nav class="row grayscale mt-3">
+                        <a class="col-1" href="https://github.com/dbgheno" title="GitHub" target="_blank">
+                            <img class="w-75" src="./images/githublogo.png" alt="GitHub">
+                        </a>
+                        <a class="col-1" href="https://www.linkedin.com/in/danielgheno/" title="LinkedIn"
+                            target="_blank">
+                            <img class="w-75" src="./images/linkedinlogo.png" alt="LinkedIn">
+                        </a>
+                        <a class="col-1" href="https://wa.me//5554984027602" title="WhatsApp" target="_blank">
+                            <img class="w-75" src="./images/whatsapp.png" alt="WhatsApp">
+                        </a>
+                        <a class="col-1" href="https://www.facebook.com/dbgheno/" title="Facebook" target="_blank">
+                            <img class="w-75" src="./images/facebooklogo.png" alt="Facebook">
+                        </a>
+                        <a class="col-1 " href="https://www.instagram.com/dbgheno/" title="Instagram"
+                            target="_blank">
+                            <img class="w-75" src="./images/instagramlogo.png" alt="Instagram">
+                        </a>
+                    </nav>
+                </section>
+            </main>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
-
