--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Gheno</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="shortcut icon" href="./images/dfavicon.ico" type="image/x-icon">
 </head>
@@ -25,16 +25,14 @@
                 alt="Foto do Daniel" title="Daniel">
             <nav class="d-flex flex-column align-items-center">
                 <a class="text-light text-decoration-none" href="./index.html">Sobre</a>
-                <a class="text-light text-decoration-none fs-4" href="./conhecimentos.html"><strong>Conhecimentos</strong></a>
+                <a class="text-light text-decoration-none fs-4"
+                    href="./conhecimentos.html"><strong>Conhecimentos</strong></a>
                 <a class="text-light text-decoration-none" href="./objetivos.html">Objetivos</a>
             </nav>
         </header>
-        <div class="col-8">
-            <div class="row m-4"></div>
-
+        <div class="col-8 d-flex align-items-center">
             <main class="row">
                 <ol>
-
                     <li class="text-dark"><strong>INFORMÁTICA</strong></li>
                     <li>Bolsista do programa Despertar.dev Full Stack (Sicredi e Growdev);</li>
                     <li>Anos de experiência em informática básica;</li>
@@ -44,7 +42,7 @@
                     <br>
 
                     <li class="text-dark"><strong>Linguagens de desenvolvimento de software:</strong></li>
-                    <ul class="sublista">
+                    <ul>
                         <li>HTML;</li>
                         <li>CSS;</li>
                         <li>Javascript;</li>
@@ -53,7 +51,7 @@
                     </ul><br><br>
 
                     <li class="text-dark"><strong>Outras habilidades:</strong></li>
-                    <ul class="sublista">
+                    <ul>
                         <li>Graduado em Educação Física;</li>
                         <li>Cozinheiro amador;</li>
                         <li>Bombeiro Voluntário de Nova Petrópolis - RS;</li>
@@ -68,8 +66,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
