--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     .grayscale {
         filter: grayscale(100%);
     }
+
     * {
         overflow: hidden;
     }
@@ -32,22 +33,16 @@
                 <a class="text-light text-decoration-none" href="./objetivos.html">Objetivos</a>
             </nav>
         </header>
-        <div class="col-8">
-            <div class="row h-25"></div>
-
-            <main class="row">
-                <!-- <div class="col-6 d-flex justify-content-center "> -->
-                    <h1><b>Daniel <span class="text-dark">Gheno</span></b></h1>
-                <!-- </div> -->
-                <section class="col-6">
+        <div class="col-8 d-flex align-items-center">
+            <main>
+                <h1><b>Daniel <span class="text-dark">Gheno</span></b></h1>
+                <section>
                     <p class="mb-0">Rua Vicente Pietro, 4811, Pinhal Alto, Nova Petrópolis - RS</p>
-                    <div class="col-10">
-                        <p><a class="text-dark" href="mailto: dbgheno@gmail.com" target="_blank">dbgheno@gmail.com</a> - (54)98402-7602</p>
-                    </div>
+                    <p><a class="text-dark" href="mailto: dbgheno@gmail.com" target="_blank">dbgheno@gmail.com</a> -
+                        (54)98402-7602</p>
                 </section>
-                <div class="offset-2"></div>
                 <section class="text-dark col-10">
-                    <p>Considero-me um nato otimizador de processos ao mesmo tempo em que constantemente busco a
+                    <p> Considero-me um nato otimizador de processos ao mesmo tempo em que constantemente busco a
                         satisfação alheia. Pelo menos, assim tenho sido, desde que me dei por conta. INTJ;
                         Fleumático-sanguíneo.
                     </p>
@@ -67,8 +62,7 @@
                         <a class="col-1" href="https://www.facebook.com/dbgheno/" title="Facebook" target="_blank">
                             <img class="w-75" src="./images/facebooklogo.png" alt="Facebook">
                         </a>
-                        <a class="col-1 " href="https://www.instagram.com/dbgheno/" title="Instagram"
-                            target="_blank">
+                        <a class="col-1 " href="https://www.instagram.com/dbgheno/" title="Instagram" target="_blank">
                             <img class="w-75" src="./images/instagramlogo.png" alt="Instagram">
                         </a>
                     </nav>
