--- a/objetivos.html
+++ b/objetivos.html
@@ -29,9 +29,7 @@
                 <a class="text-light text-decoration-none fs-4" href="./objetivos.html"><strong>Objetivos</strong></a>
             </nav>
         </header>
-        <div class="col-8">
-            <div class="row h-25"></div>
-
+        <div class="col-8 d-flex align-items-center">
             <main class="row">
                 <ul>
                     <li class="text-dark"><strong>OBTER SUCESSO NO RAMO DE DESENVOLVIMENTO DE SOFTWARE</strong></li><br>
