--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -11,13 +11,8 @@
     <link rel="shortcut icon" href="./images/dfavicon.ico" type="image/x-icon">
 </head>
 
-<style>
-    * {
-        overflow: hidden;
-    }
-</style>
 
-<body class="container-fluid mb-0 p-0 text-secondary">
+<body class="container-fluid text-secondary">
     <div class="row">
         <header class="text-center col-3 bg-secondary vh-100 me-4">
             <div class="row h-25"></div>
@@ -32,7 +27,7 @@
         </header>
         <div class="col-8 d-flex align-items-center">
             <main class="row">
-                <ol>
+                <ol class="list-unstyled">
                     <li class="text-dark"><strong>INFORMÁTICA</strong></li>
                     <li>Bolsista do programa Despertar.dev Full Stack (Sicredi e Growdev);</li>
                     <li>Anos de experiência em informática básica;</li>
