--- a/objetivos.html
+++ b/objetivos.html
@@ -11,13 +11,7 @@
     <link rel="shortcut icon" href="./images/dfavicon.ico" type="image/x-icon">
 </head>
 
-<style>
-    * {
-        overflow: hidden;
-    }
-</style>
-
-<body class="container-fluid mb-0 p-0 text-secondary">
+<body class="container-fluid text-secondary">
     <div class="row">
         <header class="text-center col-3 bg-secondary vh-100 me-4">
             <div class="row h-25"></div>
@@ -31,7 +25,7 @@
         </header>
         <div class="col-8 d-flex align-items-center">
             <main class="row">
-                <ul>
+                <ul class="list-unstyled">
                     <li class="text-dark"><strong>OBTER SUCESSO NO RAMO DE DESENVOLVIMENTO DE SOFTWARE</strong></li><br>
                     <li>Ampliar meu conhecimento em programação;</li><br>
                     <li>Direcionar minhas múltiplas habilidades para o desenvolvimento de softwares;</li><br>
