--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
     .grayscale {
         filter: grayscale(100%);
     }
-
-    * {
-        overflow: hidden;
-    }
 </style>
 
-<body class="container-fluid mb-0 p-0 text-secondary">
+<body class="container-fluid text-secondary">
     <div class="row">
         <header class="text-center col-3 bg-secondary vh-100 me-4">
             <div class="row h-25"></div>
