--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <link rel="shortcut icon" href="./images/dfavicon.ico" type="image/x-icon">
 </head>
 
-<style>
-    .grayscale {
-        filter: grayscale(100%);
-    }
-</style>
-
 <body class="container-fluid text-secondary">
     <div class="row">
         <header class="text-center col-3 bg-secondary vh-100 me-4">
@@ -44,7 +38,7 @@
                     </p>
                 </section>
                 <section>
-                    <nav class="row grayscale mt-3">
+                    <nav class="row mt-3" style="filter: grayscale(100%)">
                         <a class="col-1" href="https://github.com/dbgheno" title="GitHub" target="_blank">
                             <img class="w-75" src="./images/githublogo.png" alt="GitHub">
                         </a>
